<?xml version="1.0"?>
<package>
  <name>ysj_segway</name>
  <version>0.0.0</version>
  <description>The ysj_segway package</description>

  <maintainer email="root@todo.todo">root</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>

    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
